Fix blue button text on ios

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ button {
 	border: none;
 	padding: 0;
 	background-color: rgba(243, 243, 243, 0.219);
+	color: inherit;
 }
 
 button:hover {
